Allow setting fullscreen via MPRIS

This implements CanSetFullscreen to return true when it's a video and lets the Fullscreen property reflect and change the fullscreen state of the player.

BUG: 408059

Differential Revision: https://phabricator.kde.org/D21554